[package]
name = "img2webp"
description = "A Simple Image to WebP CLI Tool"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/BaoPaper/img2webp"
license = "MIT"
readme = "README.md"
publish = ["crates-io"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
walkdir = "2.3"

[[bin]]
name = "img2webp"
path = "src/main.rs"